--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,5 +33,6 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
-        run: pip install -r "requirements.txt"
-        run: mkdocs gh-deploy --force
+        run: |
+          pip install -r "requirements.txt"
+          mkdocs gh-deploy --force
