--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,13 +26,13 @@ jobs:
           rm index.md
           cp ../deployment_files/index.md .
 
-      - name: Install deps and deploy mkdocs server
-        uses: actions/cache@v4
+      - uses: actions/cache@v4
         with:
           key: mkdocs-material-${{ env.cache_id }}
           path: .cache
           restore-keys: |
             mkdocs-material-
+      - name: Install deps and deploy mkdocs server
         run: |
           pip install -r "requirements.txt"
           mkdocs gh-deploy --force
